# qoiconverter

./: .gitignore  CMakeLists.txt  README.md  compile.sh
examples/: CMakeLists.txt
include/converter/: converter.hpp  endian_utils.hpp  netpbm.hpp  pixbuff.hpp  qoi.hpp  task.hpp  utils.hpp
src/: .command.sh  main.cpp  netpbm.cpp  qoi.cpp  task.cpp  utils.cpp
